--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>title</title>
   </head>
   <body>
-  <p> Test </p>
+  <p class="title1" > WELCOME TOT THE NUT </p>
+  <p class="title2"> SLAPP </p>
   </body>
 </html>
