--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>title</title>
   </head>
   <body>
-  <p class="title1" > WELCOME TOT THE NUT </p>
+  <p class="title1" > WELCOME TOT THE NUT  </p>
   <p class="title2"> SLAPP </p>
+  
+  <video controls autoplay width="1" height="1">
+  <source class="bgMusic" src="slam.mp4" type="video/mp4">
+ 
+  
+</video> 
   </body>
 </html>
