--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8">
 	<link rel="stylesheet" href="styles.css">
-    <title>title</title>
+    <title>1-800-AREYOUSLAPPIN</title>
   </head>
   <body>
-  <p class="title1" > WELCOME TOT THE NUT  </p>
-  <p class="title2"> SLAPP </p>
-  
+  <div class="title1" > WELCOME TOT THE NUT  </div>
+  <div  class="title2"> SLAPP </div >
+  <img class="gif" src="https://media.giphy.com/media/KPgOYtIRnFOOk/giphy.gif" alt="SLAPP">
+  <img class="gif" src="https://akns-images.eonline.com/eol_images/Entire_Site/2017523/rs_500x281-170623103535-500-gorilla-dancing-062317.gif" alt="SLAPP">
+  <div class="title1"> Are YOU a bad enough dude to...</div>
+  <div class="title2"> SLAP THESE </div>
+  <div class="title3"> BALLS? </div>
   <video controls autoplay width="1" height="1">
-  <source class="bgMusic" src="slam.mp4" type="video/mp4">
+  <source class="bgMusic" src="dejavuBG.mp4" type="video/mp4">
  
   
 </video> 
