--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>1-800-AREYOUSLAPPIN</title>
   </head>
   <body>
+  
   <div class="title1" > WELCOME TOT THE NUT  </div>
   <div  class="title2"> SLAPP </div >
   <img class="gif" src="https://media.giphy.com/media/KPgOYtIRnFOOk/giphy.gif" alt="SLAPP">
@@ -13,10 +14,11 @@
   <div class="title1"> Are YOU a bad enough dude to...</div>
   <div class="title2"> SLAP THESE </div>
   <div class="title3"> BALLS? </div>
-  <video controls autoplay width="1" height="1">
+  <video controls autoplay width="1" height="1" loop >
   <source class="bgMusic" src="dejavuBG.mp4" type="video/mp4">
  
   
 </video> 
+
   </body>
 </html>
