--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <img class="gif" src="https://akns-images.eonline.com/eol_images/Entire_Site/2017523/rs_500x281-170623103535-500-gorilla-dancing-062317.gif" alt="SLAPP">
   <div class="title1"> Are YOU a bad enough dude to...</div>
   <div class="title2"> SLAP THESE </div>
-  <div class="title3"> BALLS? </div>
+  <marquee class="title3" behavior=alternate direction=up width=1800 height=500 scrollamount="800" scrolldelay="1"><marquee behavior=alternate direction=right>BALLS?</marquee></marquee>
+ <!-- <div class="title3"> BALLS? </div>-->
   <video controls autoplay width="1" height="1" loop >
   <source class="bgMusic" src="dejavuBG.mp4" type="video/mp4">
  
