--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
  
   
 </video> 
-
+<!-- Default Statcounter code for Nutslap.ca
+http://nutslap.ca -->
+<script type="text/javascript">
+var sc_project=11824886; 
+var sc_invisible=1; 
+var sc_security="ebb488da"; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="real time web
+analytics" href="http://statcounter.com/"
+target="_blank"><img class="statcounter"
+src="//c.statcounter.com/11824886/0/ebb488da/1/" alt="real
+time web analytics"></a></div></noscript>
+<!-- End of Statcounter Code -->
   </body>
 </html>
