--- a/index.html
+++ b/index.html
@@ -185,5 +185,8 @@ Sorcery Crush
 
 </center>
 <BR>
+ <video controls autoplay width="1" height="1" loop >
+  <source class="bgMusic" src="music.mp4" type="video/mp4"> 
+</video> 
 </body>
 </html>
