--- a/index.html
+++ b/index.html
@@ -182,6 +182,17 @@ Sorcery Crush
 
 </div>
 </div>
+<div class="shopSign">
+<img class="yen1" src="yen.gif" alt="">
+<font style="color:#450254;">
+<div class="shopText">
+
+<a href="shop.html">ENTER THE SHOP..</a>
+
+
+</div>
+<img class="yen2" src="yen.gif" alt="">
+</div>
 
 </center>
 <BR>
