Added pre-made opening page
Credit: http://dmc5.tumblr.com/post/182086552512/reigens-homepage-custom-page-by-kyrie-dmc5

--- a/shop.html
+++ b/shop.html
@@ -66,10 +66,16 @@ ARATAKA REIGEN BRAND ANTI-CURSE CHARMS: <font style="text-decoration: line-throu
 <hr>
 </div>
 
+
+
 </div>
 
 <div class="donate">
 <a href="https://secured.bbbs.org/page/34557/donate/1?ea.tracking.id=nav-btn&_ga=2.196424300.1978685033.1549402167-882257453.1549402167">IMPROVE YOUR KARMA BY DONATING DIRECTLY....</a>
+</div>
+<br>
+<div class="return">
+<a href="main.html">RETURN TO HOMEPAGE..</a>
 </div>
 <BR>
  <video controls autoplay width="1" height="1" loop >
