--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ function newColour() {
             
             <!-- THIS ONE IS IMPORTANT, IT IS THE ENTER BUTTON
                  REPLACE MY URL WITH YOURS-->
-            <a href="https://reigenarataka.github.io/reitokasoudansho"><img src="https://cdn.discordapp.com/attachments/398763317738340365/535456277799895049/cooltext312201120587744.png"></a>
+            <a href="https://reigenarataka.github.io/reitokasoudansho/main.html"><img src="https://cdn.discordapp.com/attachments/398763317738340365/535456277799895049/cooltext312201120587744.png"></a>
             
             <!-- this is the left facing arrow -->
             <img src="https://cdn.discordapp.com/attachments/398763317738340365/535432057325879316/ezgif-4-8e52bd84e12d.gif"</p><img src="https://cdn.discordapp.com/attachments/398763317738340365/535432057325879316/ezgif-4-8e52bd84e12d.gif"</p>
