--- a/shop.html
+++ b/shop.html
@@ -6,7 +6,7 @@
 IMPORTANT SPIRITUAL EQUIPMENT!!!!!!
 </title>
 </head>
-<body bgcolor="161616">
+<body class="shopbg" bgcolor="161616">
 <div class="shopHead">
 
 <font style="color:#a8001c;">
