--- a/main.html
+++ b/main.html
@@ -36,8 +36,11 @@ available!!!
 <center>
 <div class="base2">
 <div class="poulter">
-<br>
+
 <font style="color:#d46167">
+
+<img src="harm.png" class="harmP" alt="">
+<br>
 Those of you troubled with "spiritual harm",
 <br>
 <font style="color:Blue">
@@ -55,7 +58,8 @@ are they causing you trouble with your neighbours!?
 </div>
 
 <div class="lovedone" id="divtoBlink">
-
+<img src="loved.png"  alt="">
+<br>
 <font style="color:#ab2d3e">
 Do you want to hear
 <br>
@@ -74,6 +78,7 @@ those pesky inheritance battles?
 <div class="base3">
 <img class="ghost" src="ghost1gif.gif" alt="">
 <div class="photography">
+<img src="photo.png"  alt="">
 <br>
 <font style="color:#219a71">
 Spirit Photography Evaluation
@@ -86,6 +91,7 @@ any other possible cursed items
 you have and exorcise them!
 </div>
 <div class="stigma">
+<img src="stigmaP.png"  alt="">
 <br> 
 <font style="color:#FFFFFF">
 Advice About Stigmatized Properties
@@ -105,12 +111,15 @@ and protect the value of your property
 </div>
 <div class="base4">
 <div class="stiff">
-<font style="color:#bf4b7c"><b>
+<img src="stiff.png"  alt="">
+<br>
+<font style="color:#bf4b7c">
+<b>
 Your stiff shoulders may
 <br>
 be due to a spirit on your back... </b>
 <br>
-<br>
+
 <font style="color:#7179cc ">
 See us when you're not feeling well
 <br>
@@ -118,6 +127,7 @@ or for modern sicknesses
 </div>
 
 <div class="modern">
+<img src="urban.png"  alt="">
 <br>
 <font style="color:#ba993c">
 <b>Modern "Urban Legends" </b>
@@ -128,7 +138,7 @@ The Dragger, <font style="color:#FFFFFF"> Hanako-San,
 <br>
 <font style="color:#FFFFFF">
 Kashima Reiko, <font style="color:#481e2e"> Red Raincoat...
-<br>
+
 
 </div>
 <img class="arrow" src="arrowgif.gif" alt="">
@@ -137,24 +147,32 @@ Kashima Reiko, <font style="color:#481e2e"> Red Raincoat...
 
 <div class="base5">
 <div class="prices">
+
+
+
+
 <font style="color:#3cda51; font-weight:bold;" size="6">
+
+<img class="execute" src="execute.png" align="top" alt="">
+<br>
 Executing the Exorcism!!
 <br>
-
 <font style="color:#404324; font-weight:normal;" size="5">
 We will do our best to reduce the spirit possessing you
 
-<br>
+
 <br>
 Option A - Trial Course.  A Mere <font style="color:#da7bd7"> 2,000 <font style="color:#404324"> yen <font size="3">(Tax Excluded) Outside of Offer Period: 3,980 yen <font size="5">
-<br>
+
 <br>
 Option B - Serious Course.  A Mere <font style="color:#da7bd7"> 5,000 <font style="color:#404324"> yen <font size="3">(Tax Excluded) Outside of Offer Period: 8,980 yen Recommended <font size="5">
-<br>
+
 <br>
 Option C - All-Out Course.  A Mere <font style="color:#da7bd7"> 12,000 <font style="color:#404324"> yen <font size="3">(Tax Excluded) Outside of Offer Period: 19,880 yen <font size="5">
+
 <br>
 <br>
+<img class="deal" src="deal.png" align="top" alt="">
 <br>
 <font style="color:#843025"> Refer us to a friend now and get an extra 5% reduction!! Also get an add-on exorcism for 20% off!!
 </div>
