--- a/main.html
+++ b/main.html
@@ -265,6 +265,11 @@ hcb_user = {
     RELATIVE_DATES:true /* show dates in the form "X hours ago." etc. */
 };
 </script>
+<style>
+  #HCB_comment_box blockquote {
+    color:red;
+  }
+  </style>
 <!-- begin wwww.htmlcommentbox.com -->
  <div id="HCB_comment_box"><a href="http://www.htmlcommentbox.com">Widget</a> is loading comments...</div>
  <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&mod=%241%24wq1rdBcg%240rkYkkLvHYnvv%2F3GiSXFT1"+"&opts=16398&num=30&ts=1549428480722");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
