--- a/main.html
+++ b/main.html
@@ -216,7 +216,7 @@ Sorcery Crush
  replace the text in the single quotes below to customize labels.*/
 hcb_user = {
     /* L10N */
-    comments_header : 'Comments!!',
+    comments_header : 'Comments!! \n Provide your name and supernatural experience!!',
     name_label : 'Name',
     content_label: 'Enter your comment here',
     submit : 'Comment',
