--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	</head>
 <body>
 
+
+
 <div class="header">
 <img src="opener/star1.gif"  alt="">
 <img src="opener/star2.gif"  alt="">
@@ -67,6 +69,46 @@ homepage!
 <br>
 <br>
 
+
+<div class="scroll-down">
+<div class="inner">
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="100" width="100"></a>
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="50" width="50"></a>
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="200" width="200"></a>
+</div>
+</div>
+<div class="scroll-down-left">
+<div class="inner">
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="200" width="80"></a>
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="100" width="100"></a>
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="200" width="200"></a>
+</div>
+</div>
+<div class="scroll-down-right">
+<div class="inner">
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="200" width="200"></a>
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="100" width="100"></a>
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="200" width="200"></a>
+</div>
+</div>
+<div class="group-one">
+<div class="inner">
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="80" width="80"></a>
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="200" width="200"></a>
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="200" width="80"></a>
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="50" width="50"></a>
+</div>
+</div>
+<div class="solo-left">
+<div class="inner">
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="200" width="200"></a>
+</div>
+</div>
+<div class="solo-right">
+<div class="inner">
+<a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="200" width="200"></a>
+</div>
+</div>
 
 <br>
 <br>
