--- a/main.html
+++ b/main.html
@@ -33,6 +33,16 @@ available!!!
 </div>
 </div>
 
+<div class="award1">
+<img src="Twink2.png" alt="PRESTIGIOUS AWARD 1">
+
+</div>
+
+<div class="award2">
+
+<img src="DILF2.png" alt="PRESTIGIOUS AWARD 2">
+</div>
+
 <center>
 <div class="base2">
 <div class="poulter">
@@ -209,6 +219,10 @@ Sorcery Crush
 
 </div>
 <img class="yen2" src="yen.gif" alt="">
+</div>
+<div class="award3">
+<img src="THIRD2.png" alt="PRESTIGIOUS AWARD 3">
+
 </div>
 <div class="comment">
 <script>
