--- a/main.html
+++ b/main.html
@@ -34,12 +34,13 @@ available!!!
 </div>
 
 <div class="award1">
+<a href="https://twitter.com/lgbtbeam/status/1565399868402696192?s=20&t=qZZtqWtdIG4rvLWEKTK4zw">
 <img src="Twink2.png" alt="PRESTIGIOUS AWARD 1">
 
 </div>
 
 <div class="award2">
-
+<a href="https://twitter.com/denjictrl/status/1567125015656628225?s=20&t=qZZtqWtdIG4rvLWEKTK4zw">
 <img src="DILF2.png" alt="PRESTIGIOUS AWARD 2">
 </div>
 
@@ -221,6 +222,7 @@ Sorcery Crush
 <img class="yen2" src="yen.gif" alt="">
 </div>
 <div class="award3">
+<a href="https://twitter.com/sexymanOTD/status/1567538264017444867?s=20&t=qZZtqWtdIG4rvLWEKTK4zw">
 <img src="THIRD2.png" alt="PRESTIGIOUS AWARD 3">
 
 </div>
