--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ SPIRITS AND SUCH CONSULTATION
 The star psychic of the 21st century who defeated </font>
 <br> 
 <font style="font-size:45px; color:red; font-weight:bold;">
-THE DRAGGER!!!
+<a href="yokai.html">THE GREAT YOKAI KING!!!</a>
 </font>
 </div>
 <br>
@@ -59,8 +59,9 @@ homepage!
 <img src="opener/arrowR.gif"  alt="">
 <img src="opener/arrowR.gif"  alt="">
 
-<a href="main.html"><img src="opener/enter.png"  alt=""></a>
-
+<a href="main.html"> 
+<img src="opener/enter.png"  alt=""></a>
+</a>
 <img src="opener/arrowL.gif"  alt="">
 <img src="opener/arrowL.gif"  alt="">
 </div>
@@ -70,6 +71,15 @@ homepage!
 <br>
 
 
+
+
+<br>
+<br>
+<div class="counter">
+<p>You're the number <!-- Start of CuterCounter Code -->
+<a href="http://www.cutercounter.com/" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=grmnfopd&nd=6&style=24" border="0" alt="website counter"></a>
+<!-- End of CuterCounter Code --> visitor to this page.</p>
+</div>
 <div class="scroll-down">
 <div class="inner">
 <a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="100" width="100"></a>
@@ -109,14 +119,5 @@ homepage!
 <a href="main.html"><img src="https://i.imgur.com/sH2NVY2.gif" alt="Star"height="200" width="200"></a>
 </div>
 </div>
-
-<br>
-<br>
-<div class="counter">
-<p>You're the number <!-- Start of CuterCounter Code -->
-<a href="http://www.cutercounter.com/" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=grmnfopd&nd=6&style=24" border="0" alt="website counter"></a>
-<!-- End of CuterCounter Code --> visitor to this page.</p>
-</div>
-
 
 </html>
