--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ homepage!
 <br>
 <div class="counter">
 <p>You're the number <!-- Start of CuterCounter Code -->
-<a href="http://www.cutercounter.com/" target="_blank"><img src="http://www.cutercounter.com/hit.php?id=grmnfopd&nd=6&style=24" border="0" alt="website counter"></a>
+<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hxffndc&nd=7&style=22" border="0" alt="best free website hit counter"></a>
 <!-- End of CuterCounter Code --> visitor to this page.</p>
 </div>
 <div class="scroll-down">
